user-service/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-sample-service-front
  labels:
    app: user-sample-service-front
    tier: front
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: user-sample-service-front
