user-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: user-service
spec:
  path: /
  to:
    kind: Service
    name: user-sample-service-front
  port:
    targetPort: http
